# RS-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/planning/: run_eval.py  score.py
benchmarks/rschatgpt/: README.md
configs/: default.yaml
data/eval/: question_rschatgpt.jsonl  questions_planning.jsonl
data/indices/solution_db/: index.faiss  index.pkl
data/indices/solution_db_rschatgpt/: index.faiss  index.pkl
data/solutions/: guidance.txt  guidance_rschatgpt.txt
dualrag/: DUALRAG.md  lightrag.service.example  remote_data_errors.json  remote_data_global_result.json  remote_data_local_result.json  remote_data_result.json  requirements.txt  test.sh  wikipedia_data2.json
dualrag/datasets/: 1.json  2.json  eval.py  mix_half.jsonl  mix_half2.jsonl
dualrag/datasets/questions/: 1.txt  mix_half_questions_4o_mini.txt  mix_half_questions_ollama.txt  mix_questions.txt  remote_data_all_questions.txt  remote_data_questions.txt  (+1 more)
dualrag/examples/: batch_eval.py  generate_query.py  lightrag_ollama_demo copy.py  lightrag_ollama_demo.py  lightrag_openai_neo4j_milvus_redis_demo.py
dualrag/lightrag/: operate.py  prompt.py
dualrag/reproduce/: Step_0.py  Step_1.py  Step_2.py  Step_3.py  Step_3_global.py  Step_3_local.py
examples/: demo.py
rs_agent/: __init__.py  config.py
rs_agent/controller/: agent.py  prompts.py
rs_agent/knowledge_space/: __init__.py
rs_agent/solution_space/: builder.py  retriever.py
rs_agent/toolkit/: registry.py  stubs.py
scripts/: build_solution_index.py  push_to_github.sh
tests/: test_basic.py
(+3 files in other folders)
